# MindurkaBot

./: Cargo.toml
src/: args.rs  bot_trait.rs  config.rs  events.rs  main.rs
src/discord/: commands.rs  config.rs  mod.rs
src/discord/reports/: mod.rs  parser.rs
src/surreal/: fetch_profiles.rs  mod.rs  types.rs
src/surreal/sql/: fetch_profiles.surrealql  init_fetch_profiles_function.surrealql
