[package]
name = "mindurka-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
ciborium = "0.2.2"
clap = { version = "4.5.60", features = ["derive"] }
futures-lite = "2.6.1"
humantime = "2.3.0"
lapin = "4.0.1"
mindurka-rabbitmq-rust = { git = "https://github.com/Darkdustry-Coders/mindurka-rabbitmq-rust", version = "0.1.0" }
nom = "8.0.0"
# ----- #
poise = { version = "0.6.1", optional = true }
reqwest ={ version = "0.12", default-features = false, features = ["rustls-tls", "rustls-tls-webpki-roots", "json"] }
rust_decimal = "1.40.0"
serde = "1.0.228"
serde_tuple = "1.1.3"
serde_with = "3.17.0"
surrealdb = "3.0.0"
surrealdb-types = "3.0.0"
teloxide = { version = "0.17.0", optional = true, default-features = false }
teloxide-core = { version = "0.13.0", optional = true, default-features = false }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = { version = "1.0.3", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-unwrap = "1.0.1"
url = { version = "2.5.8", features = ["serde"] }

[features]
default = ["discord", "telegram"]
discord = ["dep:poise"]
telegram = ["dep:teloxide"]
